--- a/miniprogram/pages/addIdea/addIdea.wxml
+++ b/miniprogram/pages/addIdea/addIdea.wxml
@@ -12,15 +12,16 @@
 
     <view class="bg-fff pb-20 j-row1-ta">
         <view class="ml-30 mr-30 pt-30 pb-30">
-            <input type="text" name="title"  placeholder="请输入标题" />
+            <input type="text" name="title" placeholder="请输入标题" />
         </view>
     </view>
     <view class="bg-fff pb-20 j-row1-ta">
         <view class="ml-30 mr-30">
-            <textarea maxlength="-1"  name="content" placeholder="请填写您的想法"></textarea>
+            <textarea maxlength="-1" name="content" placeholder="请填写您的想法"></textarea>
         </view>
     </view>
     <view class="j-row0-layout">
-        <button formType="submit" class="j-row0-btn" loading='{{loading}}'>{{loading ? '': '保存'}}</button>
+        <button class="j-row0-btn" wx:if="{{canIUse&&!userInfo}}" open-type="getUserInfo" bindgetuserinfo="bindGetUserInfo">授权登录</button>
+        <button wx:if="{{userInfo}}" formType="submit" class="j-row0-btn" loading='{{loading}}'>{{loading ? '': '保存'}}</button>
     </view>
 </form>
